force-app/main/default/objects/FENC_Assessment_Type__c/FENC_Assessment_Type__c.object-meta.xml
<CustomObject>
    <description>Allows the recording of overarching metadata for different FENC Activities</description>
    <label>FENC Assessment Type</label>
    <nameField>
        <displayFormat>FENT-{000000}</displayFormat>
        <label>FENC Activity Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FENC Assessment Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>