force-app/main/default/objects/FENC_Assessment_Type__c/fields/FENC_Assessment__c.field-meta.xml
<CustomField>
    <fullName>FENC_Assessment__c</fullName>
    <label>FENC Assessment</label>
    <referenceTo>FENC_Assessment__c</referenceTo>
    <relationshipName>FENC_Activity_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>