force-app/main/default/objects/FENC_Assessment_Type__c/fields/Filter_Address_UPRN__c.field-meta.xml
<CustomField>
    <fullName>Filter_Address_UPRN__c</fullName>
    <label>Filter Address UPRN</label>
    <length>200</length>
    <type>Text</type>
</CustomField>