force-app/main/default/objects/FENC_Assessment_Type__c/fields/Filter_Award_Type__c.field-meta.xml
<CustomField>
    <fullName>Filter_Award_Type__c</fullName>
    <label>Filter Award Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Local Grant</fullName>
            </value>
            <value>
                <fullName>SHF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>