force-app/main/default/objects/FENC_Assessment_Type__c/fields/Filter_Exclude_already_in_other_Activity__c.field-meta.xml
<CustomField>
    <fullName>Filter_Exclude_already_in_other_Activity__c</fullName>
    <label>Filter Exclude already in other Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclude</fullName>
            </value>
            <value>
                <fullName>Include</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>