force-app/main/default/objects/FENC_Assessment_Type__c/fields/Filter_Maximum_Grant_Amount__c.field-meta.xml
<CustomField>
    <fullName>Filter_Maximum_Grant_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Filter Maximum Grant Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>