force-app/main/default/objects/FENC_Assessment_Type__c/fields/Filter_Minimum_Drawdown_Amount__c.field-meta.xml
<CustomField>
    <fullName>Filter_Minimum_Drawdown_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Filter Minimum Drawdown Amount:</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>