force-app/main/default/objects/FENC_Assessment_Type__c/fields/Filter_Minimum_Total_Cost_of_Measures__c.field-meta.xml
<CustomField>
    <fullName>Filter_Minimum_Total_Cost_of_Measures__c</fullName>
    <label>Filter Minimum Total Cost of Measures</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>