force-app/main/default/objects/FENC_Assessment_Type__c/fields/Filter_Minimum_Total_Count_of_Measures__c.field-meta.xml
<CustomField>
    <fullName>Filter_Minimum_Total_Count_of_Measures__c</fullName>
    <label>Filter Minimum Total Count of Measures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>