force-app/main/default/objects/FENC_Assessment_Type__c/fields/Filter_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Filter_Postcode__c</fullName>
    <description>Use to capture the postcode filter input by the user when creating a sample.</description>
    <label>Filter Postcode</label>
    <length>7</length>
    <type>Text</type>
</CustomField>