force-app/main/default/objects/FENC_Assessment_Type__c/fields/Filter_Regions__c.field-meta.xml
<CustomField>
    <fullName>Filter_Regions__c</fullName>
    <label>Filter Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North East</fullName>
            </value>
            <value>
                <fullName>North West</fullName>
            </value>
            <value>
                <fullName>Yorkshire and the Humber</fullName>
            </value>
            <value>
                <fullName>East Midlands</fullName>
            </value>
            <value>
                <fullName>West Midlands</fullName>
            </value>
            <value>
                <fullName>East of England</fullName>
            </value>
            <value>
                <fullName>Greater London</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>