force-app/main/default/objects/FENC_Assessment_Type__c/fields/Total_Count_of_Activities__c.field-meta.xml
<CustomField>
    <fullName>Total_Count_of_Activities__c</fullName>
    <label>Total Count of Activities</label>
    <summaryForeignKey>FENC_Activity__c.FENC_Assessment_Type__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>