force-app/main/default/objects/FENC_Assessment_Type__c/recordTypes/Desktop_Review.recordType-meta.xml
<RecordType>
    <fullName>Desktop_Review</fullName>
    <active>true</active>
    <label>Desktop Review</label>
</RecordType>