force-app/main/default/objects/FENC_Assessment_Type__c/recordTypes/On_Site_Inspection.recordType-meta.xml
<RecordType>
    <fullName>On_Site_Inspection</fullName>
    <active>true</active>
    <label>On Site Inspection</label>
</RecordType>